<resources>
    <string name="app_name">School Planning App</string>
    <string name="home_screen_btn">Show Terms</string>
    <string name="logo_txt">Logo</string>
    <string name="term_activity_title">Terms</string>
    <string name="term_details_title">Term Details</string>
    <string name="course_details_title">Course Details</string>
    <string name="assessment_details_title">Assessment Details</string>
    <string name="add_btn">Add Button</string>
    <string name="item_name_label">Title:</string>
    <string name="item_name_hint">Title</string>
    <string name="start_date_label">Start Date: </string>
    <string name="end_date_label">End Date: </string>
    <string name="save_btn_txt">Save</string>
    <string name="delete_btn_txt">Delete</string>
    <string name="course_status">Status:</string>
    <string name="course_note">Note: </string>
    <string name="instructor_name">Instructor Name:</string>
    <string name="instructor_phone">Instructor Phone:</string>
    <string name="instructor_email">Instructor Email:</string>
    <string-array name="course_statuses">
        <item>In Progress</item>
        <item>Completed</item>
        <item>Dropped</item>
        <item>Plan to Take</item>
    </string-array>
    <string-array name="assessment_types">
        <item>Objective Assessment (OA)</item>
        <item>Performance Assessment (PA)</item>
    </string-array>
</resources>