<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.CourseDetailsActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:onClick="addAssessment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/plus_icon_foreground" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--Name-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="@string/item_name_label"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/courseTitleInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/item_name_hint" />

            </LinearLayout>

            <!--Start Date-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="@string/start_date_label"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/courseStartDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Enter a Date"
                    android:inputType="date" />

            </LinearLayout>

            <!--End Date-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="@string/end_date_label"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/courseEndDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Enter a Date"
                    android:inputType="date" />

            </LinearLayout>

            <!--Status-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="@string/course_status"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/courseStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="Status" />

            </LinearLayout>

            <!--Notes-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="@string/course_note"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/courseNotes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="Notes" />

            </LinearLayout>

            <!--Instructor Name-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="@string/instructor_name"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/instructorName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lines="2"
                    android:hint="Name" />

            </LinearLayout>

            <!--Instructor Phone-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="@string/instructor_phone"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/instructorPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lines="2"
                    android:hint="Ph #" />

            </LinearLayout>

            <!--Instructor Email -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="@string/instructor_email"
                    android:inputType="phone"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/instructorEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lines="2"
                    android:inputType="textEmailAddress"
                    android:hint="email@email.com" />

            </LinearLayout>

            <!--Save/ Delete-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/saveCourseBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:backgroundTint="@android:color/holo_green_light"
                    android:onClick="saveCourse"
                    android:text="@string/save_btn_txt" />

                <Button
                    android:id="@+id/deleteCourseBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:backgroundTint="@android:color/holo_red_light"
                    android:onClick="deleteCourse"
                    android:text="@string/delete_btn_txt" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/assessmentRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginBottom="16dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:layout_editor_absoluteX="0dp" />

        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>